--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /.metadata/*
 /.ImageTestArtifact/target/classes/*
+*.class
+/ImageTestArtifact/target/maven-status/maven-compiler-plugin/compile/default-compile/*.lst
