--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /.metadata/*
 /.ImageTestArtifact/target/classes/*
+/.ImageTestArtifact/*.classpath
 *.class
 /ImageTestArtifact/target/maven-status/maven-compiler-plugin/compile/default-compile/*.lst
+/.metadata/
